Data Region: Ext4 based flag column display

--- a/.gitattributes
+++ b/.gitattributes
@@ -7585,6 +7585,7 @@ internal/webapp/internal/ViewDesigner/tab/ColumnsTab.js -text
 internal/webapp/internal/ViewDesigner/tab/FilterTab.js -text
 internal/webapp/internal/ViewDesigner/tab/SortTab.js -text
 internal/webapp/internal/ViewDesigner/ux/ComponentDataView.js -text
+internal/webapp/internal/flagColumn.js -text
 internal/webapp/internal/font-awesome-4.4.0/css/font-awesome.css -text
 internal/webapp/internal/font-awesome-4.4.0/css/font-awesome.min.css -text
 internal/webapp/internal/font-awesome-4.4.0/fonts/FontAwesome.otf -text
