Spec 24917 Load and test with 250k patient dataset. Support for data export and import of empty string. Add indexes to test schemas

--- a/.gitattributes
+++ b/.gitattributes
@@ -188,6 +188,7 @@ core/resources/schemas/dbscripts/postgresql/core-15.20-15.21.sql -text
 core/resources/schemas/dbscripts/postgresql/core-15.20-15.30.sql -text
 core/resources/schemas/dbscripts/postgresql/core-15.21-15.22.sql -text
 core/resources/schemas/dbscripts/postgresql/core-15.30-15.31.sql -text
+core/resources/schemas/dbscripts/postgresql/core-15.31-15.32.sql -text
 core/resources/schemas/dbscripts/postgresql/core-create.sql -text
 core/resources/schemas/dbscripts/postgresql/core-drop.sql -text
 core/resources/schemas/dbscripts/postgresql/labkey-0.00-13.30.sql -text
@@ -227,6 +228,7 @@ core/resources/schemas/dbscripts/sqlserver/core-15.20-15.30.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-15.21-15.22.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-15.22-15.23.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-15.23-15.24.sql -text
+core/resources/schemas/dbscripts/sqlserver/core-15.31-15.32.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-create.sql -text
 core/resources/schemas/dbscripts/sqlserver/core-drop.sql -text
 core/resources/schemas/dbscripts/sqlserver/group_concat_install.sql -text
