--- a/.gitattributes
+++ b/.gitattributes
@@ -1338,6 +1338,7 @@ api/src/org/labkey/api/settings/AdminConsole.java -text
 api/src/org/labkey/api/settings/AppProps.java -text
 api/src/org/labkey/api/settings/AppPropsImpl.java -text
 api/src/org/labkey/api/settings/BaseServerProperties.java -text
+api/src/org/labkey/api/settings/ConceptURIProperties.java -text
 api/src/org/labkey/api/settings/DateParsingMode.java -text
 api/src/org/labkey/api/settings/FolderSettingsCache.java -text
 api/src/org/labkey/api/settings/FooterProperties.java -text
