Revert fix for 24236 as 16.1 release will officially support upgrade from 13.3

--- a/.gitattributes
+++ b/.gitattributes
@@ -989,7 +989,9 @@ list/gwtsrc/org/labkey/list/client/ListEditorService.java -text
 list/gwtsrc/org/labkey/list/client/ListEditorServiceAsync.java -text
 list/module.properties -text
 list/resources/schemas/dbscripts/postgresql/list-13.10-13.20.sql -text
+list/resources/schemas/dbscripts/postgresql/list-13.30-14.10.sql -text
 list/resources/schemas/dbscripts/sqlserver/list-13.10-13.20.sql -text
+list/resources/schemas/dbscripts/sqlserver/list-13.30-14.10.sql -text
 list/schemas/lists.xsd -text
 list/src/org/labkey/list/ListModule.java -text
 list/src/org/labkey/list/controllers/ListController.java -text
@@ -1000,6 +1002,7 @@ list/src/org/labkey/list/model/ListAuditProvider.java -text
 list/src/org/labkey/list/model/ListDef.java -text
 list/src/org/labkey/list/model/ListDefinitionImpl.java -text
 list/src/org/labkey/list/model/ListDomainKind.java -text
+list/src/org/labkey/list/model/ListDomainType.java -text
 list/src/org/labkey/list/model/ListEditorServiceImpl.java -text
 list/src/org/labkey/list/model/ListImporter.java -text
 list/src/org/labkey/list/model/ListItemImpl.java -text
@@ -1013,6 +1016,7 @@ list/src/org/labkey/list/model/ListSchema.java -text
 list/src/org/labkey/list/model/ListServiceImpl.java -text
 list/src/org/labkey/list/model/ListTable.java -text
 list/src/org/labkey/list/model/ListWriter.java -text
+list/src/org/labkey/list/model/OntologyListTable.java -text
 list/src/org/labkey/list/model/VarcharListDomainKind.java -text
 list/src/org/labkey/list/view/ListDefinitionForm.java -text
 list/src/org/labkey/list/view/ListImportServiceImpl.java -text
