--- a/.gitattributes
+++ b/.gitattributes
@@ -969,6 +969,7 @@ api/src/org/labkey/api/qc/TsvDataExchangeHandler.java -text
 api/src/org/labkey/api/qc/TsvDataSerializer.java -text
 api/src/org/labkey/api/qc/ValidationDataHandler.java -text
 api/src/org/labkey/api/query/AbstractBeanQueryUpdateService.java -text
+api/src/org/labkey/api/query/AbstractContainerFilterable.java -text
 api/src/org/labkey/api/query/AbstractMethodInfo.java -text
 api/src/org/labkey/api/query/AbstractNestableDataRegion.java -text
 api/src/org/labkey/api/query/AbstractQueryChangeListener.java -text
